@@ -52,7 +52,7 @@ test_that("breakTranscriptsOnGenes honors no annotation breaks", {
 test_that("breakTranscriptsOnGenes honors multiple annotation breaks", {
     annox_ <- GRanges(c("chr7:1000-11000",
                         "chr7:12000-20000",
-                        "chr7:20000-30000"), strand="+")
+                        "chr7:20001-30000"), strand="+")
     expect_equal(length(breakTranscriptsOnGenes(tx, annox_)), 3)
 })
 
@@ -60,12 +60,21 @@ test_that("breakTranscriptsOnGenes honors multiple transcripts", {
     tx_ <- GRanges(c("chr7:1000-12000",
                      "chr7:20000-30000"),
                    strand="+")
-    annox_ <- GRanges(c("chr7:1000-6000",
-                        "chr7:6000-12000",
-                        "chr7:20000-25000",
-                        "chr7:25000-30000"),
+    annox_ <- GRanges(c("chr7:1001-6000",
+                        "chr7:6005-12000",
+                        "chr7:20001-25000",
+                        "chr7:25005-30000"),
                       strand="+")
-    expect_equal(length(breakTranscriptsOnGenes(tx_, annox_)), 4)
+    expect_equal(length(breakTranscriptsOnGenes(tx_, annox_,
+                                                geneSize = 4995)), 4)
+})
+
+test_that("Overlapping annotations raise error", {
+    tx_ <- GRanges("chr1:38834900-38873499:-")
+    annox_ <- GRanges(c("chr1:38838198-38874494:-",
+                        "chr1:38864236-38873368:-"))
+    expect_error(breakTranscriptsOnGenes(tx_, annox_, strand = "-"),
+                 "overlap")
 })
 
 test_that("Gene repair functions honor 'geneSize'", {
