@@ -55,6 +55,8 @@ BUG FIXES AND IMPROVEMENTS
       of empty ranges.
     * Fix corner cases of breakTranscriptsOnGenes() and combineTranscripts()
       failing when no break or join errors are detected.
+    * Fix breakTranscriptsOnGenes() failing to validate assumption that
+      annotations do not overlap (GitHub issue #2).
     * Fix polymeraseWave processing genes beyond chromosome boundaries and raise
       error when HMM fails to converge.
     * Fix makeConsensusAnnotations not correctly validating presence of gene ID
